--- a/FrontEnd/dettaglitest.html
+++ b/FrontEnd/dettaglitest.html
@@ -7,6 +7,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-dark border-bottom box-shadow mb-3 text-white">
+            <div class="container">
+                <a class="navbar-brand text-white" href="index.html">Dev 2024</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse d-sm-inline-flex justify-content-between" id="navbarNav">
+                    <ul class="navbar-nav flex-grow-1">
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="catalogo.html">Catalogo</a>
+                        </li>
+                        <!-- Sezione commentata: Contatti -->
+                        <!--
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="contatti.html">Contatti</a>
+                        </li>
+                        -->
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="ordini.html">Ordini</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white" href="aggiungi-prodotto.html">Cerca</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
 
 <div class="container my-5">
     <div class="row">
