--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -2,17 +2,17 @@
 <html lang="it">
 
 <head>
-  <title>Bootstrap Example</title>
+  <title>Vendita orologi</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
 
-<div class="container">
-  <h2>Carousel Example</h2>  
+<div class="container-lg">
+  <h2>Ultimi arrivi</h2>  
   <div id="myCarousel" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
@@ -22,17 +22,17 @@
     </ol>
 
     <!-- Wrapper for slides -->
-    <div class="carousel-inner">
+    <div class="carousel-inner" align="center">
       <div class="item active">
-        <img src="1.jpg" alt="Los Angeles" style="width:30%;">
+        <img src="1.jpg" alt="1.jpg" style="width:40%;">
       </div>
 
       <div class="item">
-        <img src="2.jpg" alt="Chicago" style="width:30%;">
+        <img src="2.jpg" alt="2.jpg" style="width:40%;">
       </div>
     
       <div class="item">
-        <img src="3.jpg" alt="New york" style="width:30%;">
+        <img src="3.jpg" alt="3.jpg" style="width:40%;">
       </div>
     </div>
 
@@ -47,6 +47,47 @@
     </a>
   </div>
 </div>
+
+<div class="container-lg py-5">
+    <div class="row text-center">
+      <div class="col-6 col-md-2 mb-4">
+        <a href="#" class="text-decoration-none">
+          <img src="1.jpg" class="img-fluid mb-2" style="width:80%;" alt="New In">
+          <h6 class="text-dark">NEW IN</h6>
+        </a>
+      </div>
+      <div class="col-6 col-md-2 mb-4">
+        <a href="#" class="text-decoration-none">
+          <img src="2.jpg" class="img-fluid mb-2" style="width:80%;" alt="Charms">
+          <h6 class="text-dark">CHARMS</h6>
+        </a>
+      </div>
+      <div class="col-6 col-md-2 mb-4">
+        <a href="#" class="text-decoration-none">
+          <img src="3.jpg" class="img-fluid mb-2" style="width:80%;" alt="Bracelets">
+          <h6 class="text-dark">BRACELETS</h6>
+        </a>
+      </div>
+      <div class="col-6 col-md-2 mb-4">
+        <a href="#" class="text-decoration-none">
+          <img src="1.jpg" class="img-fluid mb-2" style="width:80%;" alt="Rings">
+          <h6 class="text-dark">RINGS</h6>
+        </a>
+      </div>
+      <div class="col-6 col-md-2 mb-4">
+        <a href="#" class="text-decoration-none">
+          <img src="2.jpg" class="img-fluid mb-2" style="width:80%;" alt="Earrings">
+          <h6 class="text-dark">EARRINGS</h6>
+        </a>
+      </div>
+      <div class="col-6 col-md-2 mb-4">
+        <a href="#" class="text-decoration-none">
+          <img src="3.jpg" class="img-fluid mb-2" style="width:80%;" alt="Necklaces">
+          <h6 class="text-dark">NECKLACES</h6>
+        </a>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
