--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -48,7 +48,9 @@
   </div>
 </div>
 
+
 <div class="container-lg py-5">
+    <h2>Sezioni più visitate</h2> 
     <div class="row text-center">
       <div class="col-6 col-md-2 mb-4">
         <a href="#" class="text-decoration-none">
